uprava zobrazeni loga v mobilni verzi landscape/portrait; pridani volby cidla do komponenty statistik

--- a/app/components/map/logo.component.html
+++ b/app/components/map/logo.component.html
@@ -2,13 +2,12 @@
 	<img class="logoImage" src="..\app\images\OKsystem-logo-sm.png">
 </a>
 
-<a href="http://www.oksystem.com/cz/" class="okhome-M" target="_blank">
+<a href="http://www.oksystem.com/cz/" class="okhome" target="_blank" *showItDevice="['mobile']">
+        <div *ngIf="isPortrait()">
+                <img class="logoImage" src="../app/images/OK1.png">
+        </div>
 
-	<img class="logoImage" src="..\app\images\OKsystem-logo-sm.png" *responsive="{
-        orientation:['landscape'],
-        device: ['mobile']}">
-
-	<img class="logoImage-M" src="..\app\images\OK1.png" *responsive="{
-        orientation:['portrait'],
-        device: ['mobile']}">
+        <div *ngIf="!isPortrait()">
+                <img class="logoImage" src="..\app\images\OKsystem-logo-sm.png">
+        </div>
 </a>
