--- a/app/components/statistics/tabs.statis.component.html
+++ b/app/components/statistics/tabs.statis.component.html
@@ -10,6 +10,7 @@
 <!--MOBILE-->
 <div *showItDevice="['mobile']" >
 	<div (click)="$event.preventDefault()" >
+		<senzor-menu showInStatisticsMenu="true"></senzor-menu>
 		<div class="btn-group statis-menu-mobile" dropdown >
 			<button id="single-button" type="button" class="btn btn-primary statis-menu-mobile" dropdownToggle>
 				{{getName(selectedStatisType)}}
