Nova komponenta controlls.

--- a/app/components/about.app.component.css
+++ b/app/components/about.app.component.css
@@ -1,7 +1,6 @@
 .aboutApp {
-  position: absolute;
-  right: 10px;
-  top: 10px;
+  float: left;
+  margin-left: 52px;
 }
 
 .aboutAppMobileButton {
