--- a/app/components/app.component.html
+++ b/app/components/app.component.html
@@ -5,10 +5,7 @@
 <div style="display:none;">
 	<slider></slider>	
 </div>
-	<about-app></about-app>
-	<senzor-menu></senzor-menu>
-	<statistics></statistics>
-	<overlays-menu></overlays-menu>
+	<controls></controls>
 	<overlays-search></overlays-search>
 	<base-map-legend></base-map-legend>
 <!--<test></test>-->
