--- a/app/components/about.app.component.html
+++ b/app/components/about.app.component.html
@@ -1,11 +1,17 @@
 <div id="aboutAppId" class="aboutApp" tooltip="O aplikaci" tooltipPopupDelay="1500" tooltipPlacement="bottom">
 
-	<button  (click)="lgModal.show()" type="button" class="btn btn-default aboutAppMobileButton" [class.aboutAppButton]="!isMobile()" [class.aboutAppMobileButton]="isMobile()"> 
+	<button (click)="lgModal.show()" type="button" class="btn btn-default aboutAppButton" *showItBootstrap="['xl','lg','md']">
+		<!--[class.aboutAppButton]="!isMobile()" [class.aboutAppMobileButton]="isMobile()" -->
         <!--<img class="aboutAppIcoDown" src="..\app\images\question.png">-->
-				<span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
-				<span *hideItDevice="['mobile']">O webu</span>
-  </button>
+		<span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
+		O webu
+   </button>
 
+   <button (click)="lgModal.show()" type="button" class="btn btn-default aboutAppButton aboutAppMobileButton" *hideItBootstrap="['xl','lg','md']">
+	   <!--[class.aboutAppButton]="!isMobile()" [class.aboutAppMobileButton]="isMobile() -->
+        <!--<img class="aboutAppIcoDown" src="..\app\images\question.png">-->
+		<span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
+   </button>
 
 	<div bsModal #lgModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
 		<div class="modal-dialog modal-lg">
