--- a/app/components/controls.component.html
+++ b/app/components/controls.component.html
@@ -1,9 +1,9 @@
-<span id="controlsId" class="controlsDesktop" *hideItDevice="['mobile']">  
-  <senzor-menu></senzor-menu>
-  <statistics></statistics>
-  <overlays-menu></overlays-menu>
-  <about-app></about-app>
-</span>
+<div id="controlsId" class="controlsDesktop" *hideItDevice="['mobile']">  
+  <span class="inline senzor"><senzor-menu></senzor-menu></span>
+  <div class="inline statistics"><statistics></statistics></div>
+  <div class="inline overlaysMenu"><overlays-menu></overlays-menu></div>
+  <div class="inline aboutApp"><about-app></about-app></div>
+</div>
 
 
 <div id="controlsId" class="controlsMobile" *showItDevice="['mobile']">
