--- a/app/components/map/overlays.menu.component.css
+++ b/app/components/map/overlays.menu.component.css
@@ -1,7 +1,7 @@
 /*STANDARD VERSION*/
 .overlaysMenuDesktop {
-  margin-left: -144px;
-  margin-top: -34px;
+  /*margin-left: -144px;
+  margin-top: -34px;*/
 }
 
 .overlaysMenuMobile {
