--- a/app/components/statistics/senzor.menu.component.css
+++ b/app/components/statistics/senzor.menu.component.css
@@ -10,9 +10,13 @@
   color: gray;
 }
 
+/*.senzor-button > div {
+  float: right;
+}*/
 
 .senzor-button {
-  margin-left: -444px;
+  float: left;
+  margin-right: 10px;
 }
 
 .senzor-button-mobile {
