--- a/app/components/statistics/senzor.menu.component.html
+++ b/app/components/statistics/senzor.menu.component.html
@@ -1,48 +1,44 @@
 <div id="senzorMenuId" *hideItDevice="['mobile']" class="senzor-button" tooltip="Výběr čidla" tooltipPopupDelay="1500" tooltipPlacement="bottom">
-	<div (click)="$event.preventDefault()">
-		<div class="btn-group" dropdown>
-			<button id="single-button" type="button" class="btn btn-default " dropdownToggle>
-        <!--<img class="senzorListIcoDown" src="..\app\images\senzor.png">-->
-        <span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>
-        <span *ngIf="selectedSensor == undefined">Vyberte čidlo</span>
-				<span *ngIf="selectedSensor != undefined">{{selectedSensor.name}}</span>
-				<span class="caret"></span>
-			</button>
-			<ul dropdownMenu role="menu" aria-labelledby="single-button">
-				<li role="menuitem" *ngFor="let sensor of sensors, let ndx = index"><a class="dropdown-item" href="#" (click)="onClick(sensor)" [class.red-sensor]="isSensorSelected(sensor)" [class.bold-sensor]="isSensorOnMap(sensor)">{{sensor.name}}</a></li>
-			</ul>
-		</div>
+	<div class="btn-group" dropdown>
+		<button id="single-button" type="button" class="btn btn-default dropDownButton" dropdownToggle>
+       		<span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>
+       		<span *ngIf="selectedSensor == undefined">Vyberte čidlo</span>
+			<span *ngIf="selectedSensor != undefined">{{selectedSensor.name}}</span>
+			<span class="caret"></span>
+		</button>
+		<ul dropdownMenu role="menu" aria-labelledby="single-button">
+			<li role="menuitem" *ngFor="let sensor of sensors, let ndx = index"><a class="dropdown-item" href="#" (click)="onClick(sensor)" [class.red-sensor]="isSensorSelected(sensor)" [class.bold-sensor]="isSensorOnMap(sensor)">{{sensor.name}}</a></li>
+		</ul>
 	</div>
 </div>
 
 <div id="senzorMenuId" *showItDevice="['mobile']" class="senzor-button-mobile">
 	<div *ngIf="!showInStatisticsMenu">
 		<button id="single-button" (click)="lgModal.show()" type="button" class="btn btn-default"> 
-  	<span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>
-  </button>
+  			<span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>
+  		</button>
 
 		<div bsModal #lgModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
 			<div class="modal-dialog modal-lg">
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" (click)="lgModal.hide()" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+            				<span aria-hidden="true">&times;</span>
+          				</button>
 						<h4 class="modal-title">Vyberte čidlo</h4>
 					</div>
 					<div class="modal-body">
 						<label class="senzorItem" (click)="onClick(sensor)" (click)="lgModal.hide()" [class.red-sensor]="isSensorSelected(sensor)"
-							[class.bold-sensor]="isSensorOnMap(sensor)" *ngFor="let sensor of sensors, let ndx = index">{{sensor.name}}
-			<!--<a (click)="onClick(sensor)" [class.red-sensor]="isSensorSelected(sensor)" [class.bold-sensor]="isSensorOnMap(sensor)">{{sensor.name}}</a>-->
-		  </label>
+							[class.bold-sensor]="isSensorOnMap(sensor)" *ngFor="let sensor of sensors, let ndx = index">
+							{{sensor.name}}
+						</label>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
 
-<div *ngIf="showInStatisticsMenu" class="senzor-dropdown-mobile">
+	<div *ngIf="showInStatisticsMenu" class="senzor-dropdown-mobile">
 		<div class="btn-group statis-menu-mobile" dropdown>
 			<button id="single-button" type="button" class="btn btn-primary statis-menu-mobile" dropdownToggle>
 				<span *ngIf="selectedSensor == undefined">Vyberte čidlo</span>
@@ -53,4 +49,6 @@
 				<li role="menuitem" *ngFor="let sensor of sensors, let ndx = index"><a class="dropdown-item" href="#" (click)="onClick(sensor)" [class.red-sensor]="isSensorSelected(sensor)" [class.bold-sensor]="isSensorOnMap(sensor)">{{sensor.name}}</a></li>
 			</ul>
 		</div>
+	</div>
 </div>
+
