--- a/app/components/statistics/statistics.component.css
+++ b/app/components/statistics/statistics.component.css
@@ -1,6 +1,6 @@
 .statisMenuButtonDesktop {
-  margin-top: -34px;
-  margin-left: -298px;
+  /*margin-top: -34px;
+  margin-left: -298px;*/
 }
 
 .statisContentDesktop {
