--- a/app/components/about.app.component.html
+++ b/app/components/about.app.component.html
@@ -1,5 +1,4 @@
 <div id="aboutAppId" class="aboutApp" tooltip="O aplikaci" tooltipPopupDelay="1500" tooltipPlacement="bottom">
-
 	<button (click)="lgModal.show()" type="button" class="btn btn-default aboutAppButton" *showItBootstrap="['xl','lg','md']">
 		<!--[class.aboutAppButton]="!isMobile()" [class.aboutAppMobileButton]="isMobile()" -->
         <!--<img class="aboutAppIcoDown" src="..\app\images\question.png">-->
@@ -58,3 +57,4 @@
 			</div>
 		</div>
 	</div>
+</div>
