--- a/app/components/controls.component.html
+++ b/app/components/controls.component.html
@@ -1,14 +1,27 @@
-<div id="controlsId" class="controlsDesktop" *hideItDevice="['mobile']">  
-  <span class="inline senzor"><senzor-menu></senzor-menu></span>
-  <div class="inline statistics"><statistics></statistics></div>
-  <div class="inline overlaysMenu"><overlays-menu></overlays-menu></div>
-  <div class="inline aboutApp"><about-app></about-app></div>
+<div id="controlsId" class="controlsDesktop" *hideItDevice="['mobile']">
+	<span class="inline senzor"><senzor-menu></senzor-menu></span>
+	<div class="inline statistics">
+		<statistics></statistics>
+	</div>
+	<div class="inline overlaysMenu">
+		<overlays-menu></overlays-menu>
+	</div>
+	<div class="inline aboutApp">
+		<about-app></about-app>
+	</div>
 </div>
 
-
 <div id="controlsId" class="controlsMobile" *showItDevice="['mobile']">
-  <overlays-menu></overlays-menu>
-  <about-app></about-app>
-  <senzor-menu></senzor-menu>
-  <statistics></statistics>
+	<div class="overlaysMenuMobile">
+		<overlays-menu></overlays-menu>
+	</div>
+	<div class="aboutAppMobile">
+		<about-app></about-app>
+	</div>
+	<div class="senzorMenuMobile">
+		<senzor-menu></senzor-menu>
+	</div>
+	<div class="statisticsMobile">
+		<statistics></statistics>
+	</div>
 </div>
