--- a/app/components/map/overlays.menu.component.html
+++ b/app/components/map/overlays.menu.component.html
@@ -1,4 +1,9 @@
-<div id="overlaysMenuId" class="overlaysMenuDesktop" *hideItDevice="['mobile']" tooltip="Výběr mapové vrstvy" tooltipPopupDelay="1500" tooltipPlacement="bottom">
+<div id="overlaysMenuId" class="overlaysMenuDesktop" 
+
+
+*showItBootstrap="['xl','lg','md']"
+
+tooltip="Výběr mapové vrstvy" tooltipPopupDelay="1500" tooltipPlacement="bottom">
 		<div class="btn-group layer-button" dropdown autoClose="disabled">
 			<button id="single-button" type="button" class="btn btn-default layer-button" dropdownToggle autoClose="disabled">
         <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
@@ -30,7 +35,11 @@
 		</div>
 </div>
 
-<div id="overlaysMenuId" *showItDevice="['mobile']" class="overlaysMenuMobile">
+<div id="overlaysMenuId" 
+
+*showItBootstrap="['xs','sm']"
+
+ class="overlaysMenuMobile">
   <button id="single-button" (click)="lgModal.show()" type="button" class="btn btn-default layer-button"> 
   	<span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
   </button>
