--- a/app/components/map/search.component.html
+++ b/app/components/map/search.component.html
@@ -1,9 +1,11 @@
 <div *hideItDevice="['mobile']">
-    <input *showItBootstrap="['xl','lg','md']" id="pac-input" class="controls form-control pac-input" type="text" placeholder="Vyhledat místo" aria-describedby="inputGroupSuccess1Status">
-    <input *hideItBootstrap="['xl','lg','md']" id="pac-input" class="controls form-control pac-input-small" type="text" placeholder="Vyhledat místo" aria-describedby="inputGroupSuccess1Status">
+	<input *showItBootstrap="['xl','lg','md']" id="pac-input" class="controls form-control pac-input" type="text" placeholder="Vyhledat místo"
+		aria-describedby="inputGroupSuccess1Status">
+	<input *hideItBootstrap="['xl','lg','md']" id="pac-input" class="controls form-control pac-input-small" type="text" placeholder="Vyhledat místo"
+		aria-describedby="inputGroupSuccess1Status">
 </div>
 
 <div *showItDevice="['mobile']">
-    <input *showItBootstrap="['xl','lg','md','sm']" id="pac-input" class="controls form-control pac-input" type="text" placeholder="Vyhledat místo" aria-describedby="inputGroupSuccess1Status">
-    <input *hideItBootstrap="['xl','lg','md','sm']" id="pac-input" class="controls form-control pac-input-small" type="text" placeholder="Vyhledat místo" aria-describedby="inputGroupSuccess1Status">
+	<span class="showOnLandscape"><input  id="pac-input" class="controls form-control  pac-input" type="text" placeholder="Vyhledat místo" aria-describedby="inputGroupSuccess1Status"></span>
+	<span class="showOnPortrait"><input  id="pac-input" class="controls form-control  pac-input-small" type="text" placeholder="Vyhledat místo" aria-describedby="inputGroupSuccess1Status"></span>
 </div>
