--- a/app/components/statistics/statistics.component.html
+++ b/app/components/statistics/statistics.component.html
@@ -28,7 +28,7 @@
 					<button type="button" class="close" (click)="lgModal.hide()" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
-					<h4 class="modal-title">Výběr statistik </h4> čidlo: {{getSensorName()}}
+					<h4 class="modal-title">Výběr statistik </h4>
 				</div>
 				<div class="modal-body">
 					<tabs-statis></tabs-statis>
