--- a/app/components/map/overlays.search.component.html
+++ b/app/components/map/overlays.search.component.html
@@ -1,13 +1,21 @@
 <!--STANDARD-->
-<div class="form-group has-success has-feedback overlaysSearchStandard overlaysSearchDesktop" *hideItDevice="['mobile']">
+<div class="form-group has-success has-feedback overlaysSearchDesktop" *hideItDevice="['mobile']">
     <div class="input-group">
         <span class="input-group-addon"><logo></logo></span>
         <search></search>
     </div>  
 </div>
 
-<!--MOBILE-->
-<div class="form-group has-success has-feedback overlaysSearchStandard overlaysSearchMobile" *showItDevice="['mobile']">
+<!--MOBILE PORTRAIT-->
+<div class="form-group has-success has-feedback overlaysSearchMobilePortrait showOnPortrait" *showItDevice="['mobile']">
+    <div class="input-group">
+        <span class="input-group-addon"><logo></logo></span>
+        <search></search>       
+    </div>  
+</div>
+
+<!--MOBILE LANDSCAPE-->
+<div class="form-group has-success has-feedback overlaysSearchMobileLandscape showOnLandscape" *showItDevice="['mobile']">
     <div class="input-group">
         <span class="input-group-addon"><logo></logo></span>
         <search></search>       
