upravene popisky u grafu a tabulky statistik

--- a/app/components/statistics/statistics.component.html
+++ b/app/components/statistics/statistics.component.html
@@ -9,6 +9,9 @@
     </button>
 
 	<div class="statisContentDesktop" [collapse]="isHidden">
+		<div class="heading">
+			Zjištěné průměry hluku z čidla za období
+		</div>
 		<div class="statisContentDesktopOverflow">
 			<tabs-statis></tabs-statis>
 		</div>
