--- a/app/components/statistics/table.component.html
+++ b/app/components/statistics/table.component.html
@@ -1,8 +1,8 @@
 <table class="statis-table table table-striped table-condensed">
 	<thead>
 		<tr>
-			<th>datum</th>
-			<th>hodnota</th>
+			<th>Datum měření</th>
+			<th>intenzita hluku [db]</th>
 		</tr>
 	</thead>
 	<tbody>
