--- a/app/components/statistics/statistics.component.css
+++ b/app/components/statistics/statistics.component.css
@@ -30,5 +30,14 @@
 }
 
 .statMobile .btn{
- padding: 9px;
+  padding: 9px;
+}
+
+.heading {
+  width: 100%;
+  text-align: center;
+  font-weight: 600;
+  font-size: 13px;
+  margin-top: 3px;
+  margin-bottom: 3px;
 }
