krok nazpatek s uskocenim loga a vyhledavani

--- a/app/components/map/overlays.search.component.html
+++ b/app/components/map/overlays.search.component.html
@@ -14,8 +14,8 @@
     </div>  
 </div>
 
-<!--MOBILE LANDSCAPE-->
-<div class="form-group has-success has-feedback overlaysSearchMobileLandscape showOnLandscape" *showItDevice="['mobile']">
+<!--MOBILE LANDSCAPE     overlaysSearchMobileLandscape -->
+<div class="form-group has-success has-feedback overlaysSearchMobilePortrait showOnLandscape" *showItDevice="['mobile']">
     <div class="input-group">
         <span class="input-group-addon"><logo></logo></span>
         <search></search>       
