--- a/app/components/about.app.component.html
+++ b/app/components/about.app.component.html
@@ -53,6 +53,7 @@
 						<li>Internet Explorer</li>
 						<li>Edge</li>
 					</ul>
+					verze aplikace: {{appVersion}}
 				</div>
 			</div>
 		</div>
