celkova uprava layoutu

--- a/app/components/app.component.html
+++ b/app/components/app.component.html
@@ -8,5 +8,6 @@
 <controls></controls>
 <overlays-search></overlays-search>
 <base-map-legend></base-map-legend>
+<logo></logo>
 <!--<test></test>-->
 <!--<tabs-test></tabs-test>-->
