--- a/app/components/map/search.component.html
+++ b/app/components/map/search.component.html
@@ -1,4 +1,6 @@
-<div *hideItDevice="['mobile']">
+<input id="pac-input" class="form-control searchInput" type="text" placeholder="Vyhledat místo" aria-describedby="inputGroupSuccess1Status">
+
+<!--<div *hideItDevice="['mobile']">
 	<input *showItBootstrap="['xl','lg','md']" id="pac-input" class="controls form-control pac-input" type="text" placeholder="Vyhledat místo"
 		aria-describedby="inputGroupSuccess1Status">
 	<input *hideItBootstrap="['xl','lg','md']" id="pac-input" class="controls form-control pac-input-small" type="text" placeholder="Vyhledat místo"
@@ -8,4 +10,4 @@
 <div *showItDevice="['mobile']">
 	<span class="showOnLandscape"><input  id="pac-input" class="controls form-control  pac-input" type="text" placeholder="Vyhledat místo" aria-describedby="inputGroupSuccess1Status"></span>
 	<span class="showOnPortrait"><input  id="pac-input" class="controls form-control  pac-input-small" type="text" placeholder="Vyhledat místo" aria-describedby="inputGroupSuccess1Status"></span>
-</div>
+</div>-->
