--- a/app/components/map/logo.component.html
+++ b/app/components/map/logo.component.html
@@ -1,9 +1,7 @@
-<a href="http://www.oksystem.com/cz/" class="okhome" target="_blank" *hideItDevice="['mobile']">
-	<img *showItBootstrap="['xl','lg','md']" class="logoImage" src="..\app\images\OKsystem-logo-sm.png">
-        <img *showItBootstrap="['sm','xs']" class="logoImage" src="../app/images/OK1.png">
+<a href="http://www.oksystem.com/cz/" id="okSystemLogo" class="okhome" target="_blank" *hideItDevice="['mobile']">
+    <img class="logoImage" src="..\app\images\developed by.png">
 </a>
 
-<a href="http://www.oksystem.com/cz/" class="okhome" target="_blank" *showItDevice="['mobile']">
-        <img class="logoImage showOnLandscape" src="..\app\images\OKsystem-logo-sm.png">
-        <img class="logoImage showOnPortrait" src="../app/images/OK1.png"> 
+<a href="http://www.oksystem.com/cz/" id="okSystemLogo-M" class="okhome" target="_blank" *showItDevice="['mobile']">
+    <img class="logoImage" src="..\app\images\developed_by_small.png">
 </a>
