--- a/app/components/slider.component.html
+++ b/app/components/slider.component.html
@@ -14,7 +14,16 @@
 </div>
 <!--<div id="rectangleIE" *hideItBrowser="['ie']" *showItBrowser="['ie']"></div>-->
 
-<div id="rectangle3" class="rect3-M" *showItDevice="['mobile']">
+<div id="rectangle3" class="rect3-M-Portrait showOnPortrait" *showItDevice="['mobile']">
+    <!-- Chrome, Firefox, Safari, Opera -->  
+    <div id="rectangle2">
+	<div id="rectangle">
+	    <input id="{{sliderId}}"/>
+        </div>
+    </div>
+</div>
+
+<div id="rectangle3" class="rect3-M-Landscape showOnLandscape" *showItDevice="['mobile']">
     <!-- Chrome, Firefox, Safari, Opera -->  
     <div id="rectangle2">
 	<div id="rectangle">
